--- a/.github/workflows/hands_on_2.yml
+++ b/.github/workflows/hands_on_2.yml
@@ -1,7 +1,9 @@
 name: Lint Python Code
 
 # Add the correct triggers for this workflow
-on: [push]
+on: 
+  - push
+  - workflow_dispatch
 
 
 jobs:
