--- a/.github/workflows/hands_on_2.yml
+++ b/.github/workflows/hands_on_2.yml
@@ -22,9 +22,10 @@ jobs:
         run: cd app && pip install -r requirements.txt
       
       - name: Install pylint
-      - run: pip install pylint
+      - run: |
+           pip install pylint
+           cd app && pylint *.py
 
-      - name: run linter
-      - run: cd app && pylint *.py
+    
       # Add steps that allow this workflow to run a linter on the Python code in the app directory
 
