--- a/.github/workflows/hands_on_3.yml
+++ b/.github/workflows/hands_on_3.yml
@@ -6,6 +6,8 @@ on:
      inputs:
        city:
          description: 'city you want temperature of'
+         required: True 
+         default: 'Berlin'
 
 jobs:
   print_temperature:
@@ -24,4 +26,4 @@ jobs:
 
       - name: Run app and print temperature
         # Update the line below such that the correct city is passed to the app
-        run: cd app && python3 main.py Brussels
+        run: cd app && python3 main.py ${{ github.event.inputs.city }}
