--- a/.github/workflows/exclude/hands_on_4.yml
+++ b/.github/workflows/exclude/hands_on_4.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   print_temperature:
     runs-on: ubuntu-latest
+    env: 
+      WEATHER_API_KEY: ${{secrets.SECRET_CAT}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
